# Gayshit_Infarct_Killer

./: README.md
cpp/: CMakeLists.txt  main.cpp  manifest.xml
cpp/src/: mainwindow.cpp  mainwindow.hpp
